--- a/remote-styles.css
+++ b/remote-styles.css
@@ -1,3 +1,3 @@
-.entry.styled-title.white .entry-data .entry-header .entry-title {
-  background-color: blue;
+.entry .entry-header .entry-title {
+  background-color: blue !important;
 }
